Repaso If-Else, Semana 02

--- a/2-InstruccionIf/InstruccionIF-01.html
+++ b/2-InstruccionIf/InstruccionIF-01.html
@@ -37,7 +37,7 @@
   		<form class=" animated bounceInLeft FormIngreso">
 	   	<h1>Ingrese su edad </h1>
 	   	<input type="text"  placeholder="Ingrese su edad" id="txtIdEdad">
-	   	<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar  informaci&oacute;n</a>
+	   	<a  class="MiBotonUTNnav" onclick="mostrarElseIf()" >Mostrar  informaci&oacute;n</a>
 	 </form>	
   </div>
 
