--- a/8-TPs/04-FerreteIluminacion.html
+++ b/8-TPs/04-FerreteIluminacion.html
@@ -10,7 +10,7 @@
 		<!--final de Estilos-->
 
 		<!--Lógica-Programación-->
-		<script type="text/javascript" src="04-jsFerreteIluminacion.js"></script>
+		<script type="text/javascript" src="04-jsFerreteIluminacionSWITCH.js"></script>
         <!--Final de Lógica-Programación -->
 		
 		
@@ -48,7 +48,7 @@
 				</SELECT>
 					<input type="text" readonly placeholder="Precio con descuento" id="txtIdprecioDescuento">
 				
-				<a  class="MiBotonUTNnav" onclick="CalcularPrecio()" >Calcular precio</a>
+				<a  class="MiBotonUTNnav" onclick="CalcularPrecioOtraForma()" >Calcular precio</a>
 	 </form>	
   </div>
 
