While, Do While

--- a/5-InstruccionWhile/IteracionesWhile-07.html
+++ b/5-InstruccionWhile/IteracionesWhile-07.html
@@ -40,7 +40,7 @@
 				<INPUT type="text" placeholder="La suma acumulada" id="txtIdSuma" readonly>
 				<INPUT type="text" placeholder="El promedio" id="txtIdPromedio" readonly>
 				
-	   	<a  class="MiBotonUTNnav" onclick="mostrar()" >Comenzar el ingreso</a>
+	   	<a  class="MiBotonUTNnav" onclick="mostrarDoWhile()" >Comenzar el ingreso</a>
 	 </form>	
   </div>
 
