--- a/5-InstruccionWhile/IteracionesWhile-03.html
+++ b/5-InstruccionWhile/IteracionesWhile-03.html
@@ -38,7 +38,7 @@
   		<form class=" animated bounceInLeft FormIngreso">
 	   	<h1>Validaci&oacute;n con 'WHILE'  </h1>
 	  
-	   	<a  class="MiBotonUTNnav" onclick="mostrar()" >Pedir la clave</a>
+	   	<a  class="MiBotonUTNnav" onclick="mostrarDoWhile()" >Pedir la clave</a>
 	 </form>	
   </div>
 
