--- a/9-Parciales/2020_1Cuatri_parcial_fuentes/uno.html
+++ b/9-Parciales/2020_1Cuatri_parcial_fuentes/uno.html
@@ -28,7 +28,7 @@
    	<form id="FormIngreso" class=" animated bounceInLeft">
 	   	<h1>Ingrese datos </h1>
 	   	
-	   	<a  class="MiBotonUTNnav" onclick="uno()" >Mostrar  informaci&oacute;n</a>
+	   	<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar  informaci&oacute;n</a>
 	 </form>
   </div>
 
