--- a/9-Parciales/2018_1Cuatri_Parcial_fuentes/cuatro.html
+++ b/9-Parciales/2018_1Cuatri_Parcial_fuentes/cuatro.html
@@ -10,7 +10,7 @@
 		<!--final de /estilos-->
 
 		<!--Lógica-Programación-->
-		<script type="text/javascript" src="cuatro.js"></script>
+		<script type="text/javascript" src="/9-Parciales/2018_1Cuatri_Recu_fuentes/cuatro.js"></script>
         <!--Final de Lógica-Programación -->
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
