--- a/9-Parciales/2021_1Cuatri_Repaso/index.html
+++ b/9-Parciales/2021_1Cuatri_Repaso/index.html
@@ -36,7 +36,7 @@
             -Por cada tipo el nombre del mas viejo, solo si hay de ese tipo. <br>
             -Que raza de gatos tiene mas animales y el promedio de edad de esta raza. <br>
             </p>
-        <button type="button" class="btn btn-primary " onclick="probarEjercicio()">Probar el ejercicio</button>
+        <button type="button" class="btn btn-primary " onclick="function probarEjercicio()">Probar el ejercicio</button>
         
     </body>
 </html>
